--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <h1>Nome Utente</h1>
             </div>
             <div class="impostazioni">
+              <i class="fas fa-circle-notch"></i>
               <i class="fas fa-comment-alt"></i>
               <i class="fas fa-ellipsis-v"></i>
             </div>
@@ -34,14 +35,79 @@
           <div class="search">
             <div class="search_box">
               <i class="fas fa-search"></i>
-              <h1>Cerca o inizia una nuova chat</h1>
+              <h2>Cerca o inizia una nuova chat</h1>
+            </div>
+          </div>
+          <div class="chat">
+            <div class="chat1">
+              <img src="img/avatar_2.jpg" alt="">
+              <div class="nome">
+                <h1>Michele</h1>
+                <p>ok</p>
+              </div>
+              <div class="ultimo_accesso">
+                <p>20 11 2020 10:52:38</p>
+              </div>
+            </div>
+            <div class="chat1">
+              <img src="img/avatar_3.jpg" alt="">
+              <div class="nome">
+                <h1>Fabio</h1>
+                <p>ok</p>
+              </div>
+              <div class="ultimo_accesso">
+                <p>20 11 2020 10:52:38</p>
+              </div>
+            </div>
+            <div class="chat1">
+              <img src="img/avatar_4.jpg" alt="">
+              <div class="nome">
+                <h1>Samuele</h1>
+                <p>ok</p>
+              </div>
+              <div class="ultimo_accesso">
+                <p>20 11 2020 10:52:38</p>
+              </div>
+            </div>
+            <div class="chat1">
+              <img src="img/avatar_5.jpg" alt="">
+              <div class="nome">
+                <h1>Luisa</h1>
+                <p>ok</p>
+              </div>
+              <div class="ultimo_accesso">
+                <p>20 11 2020 10:52:38</p>
+              </div>
             </div>
           </div>
         </div>
         <div class="right">
-
+          <div class="chat_attiva">
+            <div class="info_contatto">
+              <img src="img/avatar_5.jpg" alt="">
+              <div>
+                <h1>Luisa</h1>
+                <p>Ultimo accesso oggi alle 20 11 2020 10:52:38</p>
+              </div>
+            </div>
+            <div class="impostazioni_contatto">
+              <i class="fas fa-search"></i>
+              <i class="fas fa-paperclip"></i>
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
+          <div class="messaggi">
+            <div class="messaggi_inviati">
+              <p>Lo sai che ho aperto una nuova pizzeria?</p>
+            </div>
+            <div class="messaggi_ricevuti">
+              <p>SI, ma preferirei andare al cinema</p>
+            </div>
+          </div>
         </div>
       </div>
+      </div>
+      <div class="low_bar">
       </div>
     </div>
 
