--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="search">
             <div class="search_box">
               <i class="fas fa-search"></i>
-              <h2>Cerca o inizia una nuova chat</h1>
+              <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
             </div>
           </div>
           <div class="chat">
@@ -49,7 +49,7 @@
                 <p>20 11 2020 10:52:38</p>
               </div>
             </div>
-            <div class="chat1">
+            <div class="chat2">
               <img src="img/avatar_3.jpg" alt="">
               <div class="nome">
                 <h1>Fabio</h1>
@@ -59,7 +59,7 @@
                 <p>20 11 2020 10:52:38</p>
               </div>
             </div>
-            <div class="chat1">
+            <div class="chat3">
               <img src="img/avatar_4.jpg" alt="">
               <div class="nome">
                 <h1>Samuele</h1>
@@ -69,7 +69,7 @@
                 <p>20 11 2020 10:52:38</p>
               </div>
             </div>
-            <div class="chat1">
+            <div class="chat4">
               <img src="img/avatar_5.jpg" alt="">
               <div class="nome">
                 <h1>Luisa</h1>
@@ -101,7 +101,24 @@
               <p>Lo sai che ho aperto una nuova pizzeria?</p>
             </div>
             <div class="messaggi_ricevuti">
-              <p>SI, ma preferirei andare al cinema</p>
+              <p>Si, ma preferirei andare al cinema</p>
+            </div>
+            <div class="messaggi_inviati">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="messaggi_ricevuti">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+          </div>
+          <div class="send_message">
+            <div class="emoji">
+              <i class="far fa-laugh"></i>
+            </div>
+            <div class="send">
+              <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+            </div>
+            <div class="vocal">
+              <i class="fas fa-microphone"></i>
             </div>
           </div>
         </div>
