--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
           integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
           crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title>Boolzapp</title>
@@ -18,8 +19,8 @@
         <div class="left">
           <header>
             <div class="foto">
-              <img src="img/avatar_1.jpg" alt="">
-              <h1>Nome Utente</h1>
+              <img :src="utente.immagine" alt="">
+              <h1>{{utente.nome}}</h1>
             </div>
             <div class="impostazioni">
               <a href="#"><i class="fas fa-circle-notch"></i></a>
@@ -37,7 +38,7 @@
             </div>
           </div>
 
-          <!--   SEARCH   -->
+          <!--   SEARCH CHAT  -->
           <div class="search">
             <div class="search_box">
               <a href="#"> <i class="fas fa-search"></i></a>
@@ -46,75 +47,15 @@
           </div>
 
           <!--   TUTTE LE CHAT   -->
-          <div class="chat">
+          <div class="chat" v-for="(chat, i) in chat">
             <div class="anteprima_chat">
-              <img src="img/avatar_2.jpg" alt="">
+              <img :src="chat.immagine" alt="">
               <div class="nome">
-                <h1>Michele</h1>
-                <p>ok</p>
+                <h1>{{chat.nome}}</h1>
+                <p>{{chat.testo}}</p>
               </div>
               <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_3.jpg" alt="">
-              <div class="nome">
-                <h1>Fabio</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_4.jpg" alt="">
-              <div class="nome">
-                <h1>Samuele</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_5.jpg" alt="">
-              <div class="nome">
-                <h1>Paolo</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_6.jpg" alt="">
-              <div class="nome">
-                <h1>Luisa</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_7.jpg" alt="">
-              <div class="nome">
-                <h1>Mario</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
-              </div>
-            </div>
-            <div class="anteprima_chat">
-              <img src="img/avatar_8.jpg" alt="">
-              <div class="nome">
-                <h1>Luigi</h1>
-                <p>ok</p>
-              </div>
-              <div class="ultimo_accesso">
-                <p>20 11 2020 10:52:38</p>
+                <p>{{chat.ultimo_accesso}}</p>
               </div>
             </div>
           </div>
