--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
 
           <!--   TUTTE LE CHAT   -->
-          <div class="chat" v-for="(element, i) in chat" >
+          <div class="chat" v-for="(element, i) in chat" @click="chatActive(i)" >
             <div class="anteprima_chat">
               <img :src="element.immagine" alt="">
               <div class="nome">
@@ -81,7 +81,7 @@
           <!--   MESSAGGI CHAT ATTIVA -->
           <div class="messaggi" v-for="(element, i) in chat">
             <div class="messaggi_inviati">
-              {{messaggi.text}}
+              {{element.text_send}}
             </div>
             <div class="messaggi_ricevuti">
               <p></p>
