--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           <div class="search">
             <div class="search_box">
               <a href="#"> <i class="fas fa-search"></i></a>
-              <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat" v-model="searchChat" @keyup="cercaChat()">
+              <input type="text"  placeholder="Cerca o inizia una nuova chat" v-model="searchChat" @keyup="cercaChat()">
             </div>
           </div>
 
           <!--   TUTTE LE CHAT   -->
-          <div class="chat" v-for="(element, i) in chat" v-if="element.visibile === true" @click="chatActive(i)" >
+          <div class="chat" v-for="(element, i) in chat" v-if="element.visibile" @click="chatActive(i)" >
             <div class="anteprima_chat" :class="{attivo: i === active}" >
               <img :src="element.immagine" alt="">
               <div class="nome">
@@ -80,8 +80,13 @@
 
           <!--   MESSAGGI CHAT ATTIVA -->
           <div class="messaggi">
-            <div v-for="(element, i) in chat[active].messaggi" :class="(element.type === 'send')?'messaggi_inviati' : 'messaggi_ricevuti' ">
+            <div v-for="(element, i) in chat[active].messaggi" :class="(element.type === 'send')?'messaggi_inviati' : 'messaggi_ricevuti' " >
               {{element.text}}
+              <i class="fas fa-chevron-down" @click="showDrop(i)">
+                <div class="dropdown" :class="{dropOn: element.dropdown}" @mouseleave="showDrop(i)">
+                  <p @click="cancellaMessaggio(i)">Elimina messaggio</p>
+                </div>
+              </i>
               <div class="ora_invio">
                 {{element.time}}
               </div>
@@ -107,20 +112,6 @@
       </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <script type="text/javascript" src="js/script.js">
-
-    </script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
